--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.8.12
+  architect: giantswarm/architect@0.8.14
 
 workflows:
   build:
@@ -32,6 +32,8 @@ workflows:
           requires:
             - go-build
           filters:
+            branches:
+              only: master
             # Trigger the job also on git tag.
             tags:
               only: /^v.*/
@@ -50,53 +52,54 @@ workflows:
             tags:
               only: /^v.*/
 
-      # deploy to aws installations (only tags)
-      - architect/push-to-app-collection:
-          context: "architect"
-          name: push-app-operator-to-aws-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "aws-app-collection"
-          disable_force_upgrade: true
-          unique: "true"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
-
-      # deploy to azure installations (only tags)
-      - architect/push-to-app-collection:
-          context: "architect"
-          name: push-app-operator-to-azure-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "azure-app-collection"
-          disable_force_upgrade: true
-          unique: "true"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
-
-      # deploy to kvm installations (only tags)
-      - architect/push-to-app-collection:
-          context: "architect"
-          name: push-app-operator-to-kvm-app-collection
-          app_name: "app-operator"
-          app_collection_repo: "kvm-app-collection"
-          disable_force_upgrade: true
-          unique: "true"
-          requires:
-            - push-app-operator-to-control-plane-app-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+#      TODO: Uncomment it after we deployed helm 3 supported app-operator into all installations.
+#      # deploy to aws installations (only tags)
+#      - architect/push-to-app-collection:
+#          context: "architect"
+#          name: push-app-operator-to-aws-app-collection
+#          app_name: "app-operator"
+#          app_collection_repo: "aws-app-collection"
+#          disable_force_upgrade: true
+#          unique: "true"
+#          requires:
+#            - push-app-operator-to-control-plane-app-catalog
+#          filters:
+#            branches:
+#              ignore: /.*/
+#            tags:
+#              only: /^v.*/
+#
+#      # deploy to azure installations (only tags)
+#      - architect/push-to-app-collection:
+#          context: "architect"
+#          name: push-app-operator-to-azure-app-collection
+#          app_name: "app-operator"
+#          app_collection_repo: "azure-app-collection"
+#          disable_force_upgrade: true
+#          unique: "true"
+#          requires:
+#            - push-app-operator-to-control-plane-app-catalog
+#          filters:
+#            branches:
+#              ignore: /.*/
+#            tags:
+#              only: /^v.*/
+#
+#      # deploy to kvm installations (only tags)
+#      - architect/push-to-app-collection:
+#          context: "architect"
+#          name: push-app-operator-to-kvm-app-collection
+#          app_name: "app-operator"
+#          app_collection_repo: "kvm-app-collection"
+#          disable_force_upgrade: true
+#          unique: "true"
+#          requires:
+#            - push-app-operator-to-control-plane-app-catalog
+#          filters:
+#            branches:
+#              ignore: /.*/
+#            tags:
+#              only: /^v.*/
 
       - architect/integration-test:
           name: basic-integration-test
