--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -14,6 +14,8 @@ data:
       listen:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
+      app:
+        unique: {{ .Values.resource.app.unique }}
       collector:
         apps:
           defaultTeam: "batman"
