--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -15,7 +15,7 @@ data:
         address: 'http://0.0.0.0:{{ .Values.port }}'
     service:
       app:
-        unique: {{ .Values.resource.app.unique }}
+        unique: {{ include resource.app.unique . }}
       collector:
         apps:
           defaultTeam: "batman"
