--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -65,6 +65,7 @@ rules:
     - networkpolicies
   verbs:
     - create
+    - delete
     - get
 - apiGroups:
     - policy
@@ -72,6 +73,7 @@ rules:
     - podsecuritypolicies
   verbs:
     - create
+    - delete
     - get
     - use
 - apiGroups:
@@ -80,6 +82,7 @@ rules:
     - clusterrolebindings
   verbs:
     - create
+    - delete
     - get
 - apiGroups:
     - rbac.authorization.k8s.io
@@ -88,6 +91,7 @@ rules:
   verbs:
     - bind
     - create
+    - delete
     - get
 - apiGroups:
     - ""
@@ -96,6 +100,7 @@ rules:
     - serviceaccounts
   verbs:
     - get
+    - delete
     - create
 - apiGroups:
     - apps
