--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,14 +39,12 @@ workflows:
             tags:
               only: /^v.*/
 
-      # build and push chart to app catalog
       - architect/push-to-app-catalog:
           context: architect
           name: push-app-operator-to-control-plane-app-catalog
           app_catalog: "control-plane-catalog"
           app_catalog_test: "control-plane-test-catalog"
           chart: "app-operator"
-          # Make sure docker image is successfully built.
           requires:
             - push-app-operator-to-quay
             - push-app-operator-to-aliyun
@@ -54,54 +52,50 @@ workflows:
             tags:
               only: /^v.*/
 
-#      TODO: Uncomment it after we deployed helm 3 supported app-operator into all installations.
-#      # deploy to aws installations (only tags)
-#      - architect/push-to-app-collection:
-#          context: "architect"
-#          name: push-app-operator-to-aws-app-collection
-#          app_name: "app-operator"
-#          app_collection_repo: "aws-app-collection"
-#          disable_force_upgrade: true
-#          unique: "true"
-#          requires:
-#            - push-app-operator-to-control-plane-app-catalog
-#          filters:
-#            branches:
-#              ignore: /.*/
-#            tags:
-#              only: /^v.*/
-#
-#      # deploy to azure installations (only tags)
-#      - architect/push-to-app-collection:
-#          context: "architect"
-#          name: push-app-operator-to-azure-app-collection
-#          app_name: "app-operator"
-#          app_collection_repo: "azure-app-collection"
-#          disable_force_upgrade: true
-#          unique: "true"
-#          requires:
-#            - push-app-operator-to-control-plane-app-catalog
-#          filters:
-#            branches:
-#              ignore: /.*/
-#            tags:
-#              only: /^v.*/
-#
-#      # deploy to kvm installations (only tags)
-#      - architect/push-to-app-collection:
-#          context: "architect"
-#          name: push-app-operator-to-kvm-app-collection
-#          app_name: "app-operator"
-#          app_collection_repo: "kvm-app-collection"
-#          disable_force_upgrade: true
-#          unique: "true"
-#          requires:
-#            - push-app-operator-to-control-plane-app-catalog
-#          filters:
-#            branches:
-#              ignore: /.*/
-#            tags:
-#              only: /^v.*/
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-aws-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "aws-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-azure-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "azure-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: "architect"
+          name: push-app-operator-to-kvm-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "kvm-app-collection"
+          disable_force_upgrade: true
+          unique: "true"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
 
       - architect/integration-test:
           context: architect
