--- a/.github/workflows/zz_generated.create_release.yaml
+++ b/.github/workflows/zz_generated.create_release.yaml
@@ -26,7 +26,6 @@ jobs:
     runs-on: ubuntu-18.04
     outputs:
       project_go_path: ${{ steps.get_project_go_path.outputs.path }}
-      ref_version: ${{ steps.ref_version.outputs.refversion }}
       version: ${{ steps.get_version.outputs.version }}
     steps:
       - name: Get version
@@ -60,21 +59,6 @@ jobs:
           fi
           echo "path=\"$path\""
           echo "::set-output name=path::${path}"
-      - name: Check if reference version
-        id: ref_version
-        run: |
-          title="$(echo "${{ github.event.head_commit.message }}" | head -n 1 -)"
-          if echo $title | grep -qE '^release v[0-9]+\.[0-9]+\.[0-9]+([.-][^ .-][^ ]*)?( \(#[0-9]+\))?$' ; then
-            version=$(echo $title | cut -d ' ' -f 2)
-          fi
-          version=$(echo $title | cut -d ' ' -f 2)
-          version="${version#v}" # Strip "v" prefix.
-          refversion=false
-          if [[ "${version}" =~ ^[0-9]+.[0-9]+.[0-9]+-[0-9]+$ ]]; then
-            refversion=true
-          fi
-          echo "refversion =\"$refversion\""
-          echo "::set-output name=refversion::$refversion"
   install_semver:
     name: Install semver
     runs-on: ubuntu-18.04
@@ -118,7 +102,7 @@ jobs:
   update_project_go:
     name: Update project.go
     runs-on: ubuntu-18.04
-    if: ${{ needs.gather_facts.outputs.version != '' && needs.gather_facts.outputs.project_go_path != '' && needs.gather_facts.outputs.ref_version != 'true' }}
+    if: ${{ needs.gather_facts.outputs.version != '' && needs.gather_facts.outputs.project_go_path != ''}}
     needs:
       - gather_facts
       - install_semver
@@ -186,7 +170,7 @@ jobs:
         with:
           ref: ${{ github.sha }}
       - name: Ensure correct version in project.go
-        if: ${{ needs.gather_facts.outputs.project_go_path != '' && needs.gather_facts.outputs.ref_version != 'true' }}
+        if: ${{ needs.gather_facts.outputs.project_go_path != ''}}
         run: |
           file="${{ needs.gather_facts.outputs.project_go_path }}"
           version="${{ needs.gather_facts.outputs.version }}"
