--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ workflows:
       - architect/integration-test:
           context: architect
           name: basic-integration-test
+          setup-script: "integration/setup/setup.sh"
           test-dir: "integration/test/app/basic"
           requires:
             - go-build
@@ -63,6 +64,7 @@ workflows:
       - architect/integration-test:
           context: architect
           name: kubeconfig-integration-test
+          setup-script: "integration/setup/setup.sh"
           test-dir: "integration/test/app/kubeconfig"
           requires:
             - go-build
