--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -17,6 +17,7 @@ data:
       app:
         unique: {{ include "resource.app.unique" . }}
       chart:
+        webhookAuthToken: '{{ .Values.Installation.V1.Secret.AppOperator.WebhookAuthToken }}'
         {{- if hasSuffix "-unique" .Release.Name }}
         webhookBaseURL: 'http://{{ include "resource.default.name" . }}.{{ include "resource.default.namespace" . }}.svc.cluster.local:{{ .Values.port }}'
         {{- else }}
