Make resync period configurable

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -30,6 +30,9 @@ Installation:
       AppOperator:
         WebhookAuthToken: ""
 
+operatorkit:
+  resyncPeriod: "5m"
+
 project:
   branch: "[[ .Branch ]]"
   commit: "[[ .SHA ]]"
