--- a/helm/app-operator/templates/configmap.yaml
+++ b/helm/app-operator/templates/configmap.yaml
@@ -30,3 +30,5 @@ data:
         registry: '{{ .Values.Installation.V1.Registry.Domain }}' 
       kubernetes:
         incluster: true
+      operatorkit:
+        resyncPeriod: '{{ .Values.operatorkit.resyncPeriod }}' 
