--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -41,3 +41,8 @@ deployment:
   requests:
     cpu: 250m
     memory: 250Mi
+  limits:
+    memory: 280Mi
+
+verticalPodAutoscaler:
+  enabled: true
