--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -38,11 +38,18 @@ project:
   commit: "[[ .SHA ]]"
 
 deployment:
-  requests:
-    cpu: 250m
-    memory: 250Mi
-  limits:
-    memory: 280Mi
+  management:
+    requests:
+      cpu: 250m
+      memory: 250Mi
+    limits:
+      memory: 280Mi
+  workload:
+    requests:
+      cpu: 100m
+      memory: 50Mi
+    limits:
+      memory: 50Mi
 
 verticalPodAutoscaler:
   enabled: true
