--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -8,10 +8,7 @@ CVE-2022-24687 until=2022-12-31
 
 # pkg:golang/github.com/kataras/iris/v12@v12.1.8
 # This is the latest release at the moment
-CVE-2021-23772 until=2022-08-30
-
-# pkg:golang/github.com/mholt/archiver/v3@v3.5.0
-sonatype-2022-0204 until=2022-06-30
+CVE-2021-23772 until=2022-12-31
 
 # pkg:golang/github.com/urfave/negroni@v1.0.0
 # This library seems to be abandoned
@@ -19,31 +16,18 @@ sonatype-2021-1485 until=2022-12-31
 
 # pkg:golang/helm.sh/helm/v3@v3.9.0
 # This is the latest release at the moment
-CVE-2018-1714 until=2022-06-30
-
-# pkg:github.com/containerd/containerd@v1.6.4
-# unused dependency of spf13 libraries
-CVE-2022-31030 until=2022-07-01
-
-# pkg:golang/github.com/kataras/iris/v12@v12.1.8
-# imported from:
-#  - github.com/getsentry/sentry-go@v0.13.0
-CVE-2021-23772 until=2022-08-01
+sonatype-2022-5277 until=2022-12-31
 
 # pkg:golang/github.com/nats-io/jwt@v1.2.2
 # imported from:
 #  - github.com/go-kit/kit@v0.12.0
-CVE-2021-3127 until=2022-08-30
+CVE-2021-3127 until=2022-12-31
 
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
-CVE-2020-26892 until=2022-08-30
-
-# pkg:golang/helm.sh/helm/v3@v3.9.0
-CVE-2018-1714 until=2022-08-01
+CVE-2020-26892 until=2022-12-31
 
 # pkg:golang/github.com/mholt/archiver/v3@v3.5.0
-# imported from:
-#  - github.com/giantswarm/helmclient/v4
-sonatype-2022-0204 until=2022-08-30
+sonatype-2021-0276 until=2022-12-31
 
-sonatype-2021-0276 until=2022-08-30
+# pkg:golang/github.com/labstack/echo/v4@v4.5.0
+sonatype-2022-5436 until=2022-12-31
