--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -10,6 +10,7 @@ CVE-2022-24687 until=2022-12-31
 # This is the latest release at the moment
 CVE-2021-23772 until=2022-12-31
 
+
 # pkg:golang/github.com/urfave/negroni@v1.0.0
 # This library seems to be abandoned
 sonatype-2021-1485 until=2022-12-31
@@ -21,6 +22,9 @@ sonatype-2022-5277 until=2022-12-31
 # pkg:golang/github.com/nats-io/jwt@v1.2.2
 # imported from:
 #  - github.com/go-kit/kit@v0.12.0
+
+CVE-2021-3127 until=2022-09-30
+# pkg:golang/github.com/nats-io/jwt@v0.3.2
 CVE-2021-3127 until=2022-12-31
 
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
@@ -29,5 +33,6 @@ CVE-2020-26892 until=2022-12-31
 # pkg:golang/github.com/mholt/archiver/v3@v3.5.0
 sonatype-2021-0276 until=2022-12-31
 
-# pkg:golang/github.com/labstack/echo/v4@v4.5.0
+sonatype-2021-0276 until=2022-09-30
+sonatype-2022-5277 until=2022-09-30
 sonatype-2022-5436 until=2022-12-31
