Make spec.podMetricsEndpoints.port a string

--- a/helm/app-operator/templates/pod-monitor.yaml
+++ b/helm/app-operator/templates/pod-monitor.yaml
@@ -14,5 +14,5 @@ spec:
     matchLabels:
       {{- include "labels.selector" . | nindent 6 }}
   podMetricsEndpoints:
-    - port: {{ .Values.port }}
+    - port: "{{ .Values.port }}"
 {{- end }}
