--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -38,6 +38,12 @@ CVE-2021-3127 until=2022-12-31
 # pkg:golang/github.com/nats-io/jwt@v0.3.2
 CVE-2020-26892 until=2022-12-31
 
+# pkg:golang/github.com/containerd/containerd@v1.6.6
+CVE-2022-23471 until=2022-12-31
+
+# pkg:golang/golang.org/x/net@v0.2.0
+CVE-2022-41717 until=2022-12-31
+
 # pkg:golang/github.com/mholt/archiver/v3@v3.5.0
 sonatype-2021-0276 until=2022-12-31
 
