--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -17,6 +17,9 @@ CVE-2021-23772 until=2022-12-31
 # This library seems to be abandoned
 sonatype-2021-1485 until=2022-12-31
 
+# pkg:golang/k8s.io/apiserver@v0.25.4
+sonatype-2022-6522 until=2023-02-01
+
 # pkg:golang/helm.sh/helm/v3@v3.9.0
 # This is the latest release at the moment
 sonatype-2022-5277 until=2022-12-31
