--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -47,6 +47,8 @@ sonatype-2021-0276 until=2023-06-30
 
 # pkg:golang/helm.sh/helm/v3@v3.9.4
 CVE-2022-23524 until=2023-06-30
+
+CVE-2023-25165 until=2023-06-30
 CVE-2022-23525 until=2023-06-30
 CVE-2022-23526 until=2023-06-30
 
