--- a/helm/app-operator/templates/pod-monitor.yaml
+++ b/helm/app-operator/templates/pod-monitor.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.bootstrapMode.enabled }}
+{{- if and (not .Values.bootstrapMode.enabled) (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") }}
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
