--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -5,4 +5,4 @@ name: app-operator
 appVersion: [[ .AppVersion ]]
 version: [[ .Version ]]
 annotations:
-  application.giantswarm.io/team: "batman"
+  application.giantswarm.io/team: "honeybadger"
