--- a/helm/app-operator/templates/servicemonitor.yaml
+++ b/helm/app-operator/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -14,3 +15,4 @@ spec:
   selector:
     matchLabels:
   {{- include "labels.selector" . | nindent 6 }}
+{{- end }}
