--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@6.11.0
+  architect: giantswarm/architect@4.29.0
 
 workflows:
   build:
@@ -67,6 +67,7 @@ workflows:
       - architect/integration-test:
           context: architect
           name: basic-integration-test
+          apptestctl-version: "v0.17.0"
           setup-script: "integration/setup/setup.sh"
           test-dir: "integration/test/app/basic"
           requires:
