--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ workflows:
           context: architect
           name: basic-integration-test
           apptestctl-version: "v0.17.0"
+          install-app-platform: true
           setup-script: "integration/setup/setup.sh"
           test-dir: "integration/test/app/basic"
           requires:
