--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -59,6 +59,12 @@ sonatype-2022-5436 until=2023-06-30
 # pkg:golang/golang.org/x/text@v0.3.7
 CVE-2022-32149 until=2023-06-30
 
+# pkg:golang/github.com/gin-gonic/gin@v1.9.0
+CVE-2023-29401 until=2023-06-30
+
+# pkg:golang/google.golang.org/grpc@v1.52.0
+CVE-2023-32731 until=2023-06-30
+
 CVE-2022-41723 until=2023-06-30
 CVE-2023-27561 until=2023-06-30
 CVE-2023-25173 until=2023-06-30
