--- a/.github/workflows/zz_generated.check_values_schema.yaml
+++ b/.github/workflows/zz_generated.check_values_schema.yaml
@@ -16,29 +16,8 @@ on:
   push: {}
 
 jobs:
-  existence_check:
-    name: 'Check for the existence of values.schema.json'
-    runs-on: ubuntu-latest
-    outputs:
-      exists: ${{ steps.existence_check.outputs.exists }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: 'Check for the existence of values.schema.json'
-        id: existence_check
-        run: |
-          if [ -f ${helm_dir}/values.schema.json ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-          fi
-
   validate:
     name: 'validate values.yaml against values.schema.json'
-    needs: existence_check
-    if: ${{ needs.existence_check.outputs.exists == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -55,6 +34,12 @@ jobs:
         run: |
           for chart_yaml in helm/*/Chart.yaml; do
             helm_dir="${chart_yaml%/Chart.yaml}"
+
+            if [ ! -f ${helm_dir}/values.schema.json ]; then
+              echo "Skipping validation for ${helm_dir} folder, because 'values.schema.json' does not exist..."
+              continue
+            fi
+
             values=${helm_dir}/values.yaml
             if [ -f ${helm_dir}/ci/ci-values.yaml ]; then
               # merge ci-values.yaml into values.yaml (providing required values)
